# django-test-shop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.uk.md  docker-compose.yml  manage.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: permissions.py  serializers.py  urls.py  views.py
api/tests/: test_api.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: entrypoint.sh
docs/: 06 Project M3-1.md  AUDIT.md
gql/: schema.py
gql/tests/: test_graphql.py
orders/: admin.py  analytics.py  apps.py  cart.py  context_processors.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_cartitem.py  0003_cartitem_cartitem_qty_gte_1_and_more.py
orders/tests/: factories.py  test_analytics.py  test_cart.py  test_cart_views.py  test_checkout.py  test_models.py  test_services.py  test_tasks.py
payments/: admin.py  apps.py  models.py  services.py
payments/migrations/: 0001_initial.py
payments/tests/: test_models.py  test_services.py
products/: admin.py  apps.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/tests/: factories.py  test_models.py  test_seed.py  test_views.py
reviews/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/tests/: test_reviews.py
static/css/: shop.css
templates/: base.html
templates/community/: community.html
templates/emails/: base_email.html  order_admin.html  order_admin.txt  order_confirmation.html  order_confirmation.txt
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/tests/: factories.py  (+2 more)
(+29 files in other folders)
